# fs-hdfs

./: .gitignore  Cargo.toml  README.md  build.rs
c_src/libhdfs/: exception.c  exception.h  hdfs.c  hdfs.h  jni_helper.c  jni_helper.h
c_src/libminidfs/: exception.h  jni_helper.h  native_mini_dfs.c  native_mini_dfs.h
src/: err.rs  hdfs.rs  lib.rs  minidfs.rs  test.rs  util.rs
src/walkdir/: mod.rs  tree_iter.rs
