[package]
name = "fs-hdfs"
version = "0.1.1"
edition = "2018"

description = "libhdfs binding library and safe Rust APIs"
authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"

keywords = ["hdfs", "hadoop"]
documentation = "https://yahonanjing.github.io/fs-hdfs"
homepage = "https://github.com/yahoNanJing/fs-hdfs"
repository = "https://github.com/yahoNanJing/fs-hdfs"
readme = "README.md"

[lib]
name = "hdfs"
path = "src/lib.rs"

[features]
use_existing_hdfs = []

[build-dependencies]
cc = "1.0"
bindgen = "^0.59"

[dependencies]
lazy_static = "^1.4"
libc = "^0.2"
url = "^2.2"
log = "^0.4"

[dev-dependencies]
uuid = {version = "^0.8", features = ["v4"]}